[package]
name = "minidock-rs"
version = "0.1.0"
edition = "2021"
description = "A minimal Linux container runtime written in Rust"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
nix = { version = "0.29", features = ["sched", "hostname", "mount", "fs"] }